# mokelumne-providers-ldc

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
mokelumne/providers/ldc/: get_provider_info.py  provider.yaml
mokelumne/providers/ldc/hooks/: ldc.py
mokelumne/providers/ldc/util/: ldc.py
test/fixtures/: ldc-treebank-3.json
test/unit/: test_ldc.py
