[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "mokelumne-providers-ldc"
version = "1.0.3"
dependencies = [
    "apache-airflow-task-sdk == 1.2.2",
    "beautifulsoup4",
    "requests",
]
requires-python = ">= 3.13, < 3.15"
authors = [
    {name = "Anna Wilcox"},
    {name = "maría a. matienzo"},
    {name = "Jason Raitz"},
    {name = "Daniel Schmidt"},
    {name = "Yuchai Zhou"},
]
readme = "README.md"
license = "MIT"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
lint = [
    "mypy ~= 1.17.1",
    "pydoclint ~= 0.6.10",
    "pylint ~= 3.3",
    "types-PyYAML",
]

[project.urls]
Repository = "https://github.com/BerkeleyLibrary/mokelumne-providers-ldc"
Issues = "https://github.com/BerkeleyLibrary/mokelumne-providers-ldc/issues"

[project.entry-points."apache_airflow_provider"]
ldc = "mokelumne.providers.ldc.get_provider_info:get_provider_info"

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
warn_redundant_casts = true
warn_return_any = true

[tool.setuptools.packages.find]
include = ['mokelumne*']

[tool.setuptools.package-data]
"mokelumne.providers.ldc" = ["provider.yaml"]

[tool.pydoclint]
allow-init-docstring = true
skip-checking-raises = true
style = "sphinx"

[tool.pylint.messages_control]
disable = ["expression-not-assigned", "pointless-statement", "too-many-statements"]

[tool.pytest]
minversion = "9.0"
addopts = [
    "-v",
    "-s",
    "--junit-xml=artifacts/pytest/airflow_test.xml",
    "--cov-report=term",
    "--cov-report=html:artifacts/coverage",
    "--cov=mokelumne",
]
markers = [
    "unit: fast isolated unit tests with no external dependencies",
]
